<resources>
    <string name="app_name">Spotify Streamer</string>
    <string name="notification_artist_no_results">Search returned no results.\nPlease Try again.</string>
    <string name="notification_no_network">Network Unavailable. Try again when connection is ready</string>
    <string name="title_activity_playlist">Top 10 Tracks</string>
    <string name="artist_name">Artist Name</string>
    <string name="title_activity_player">Now Playing</string>

    <string name="action_settings">Settings</string>

    <string name="placeHolder_time">0:00</string>

    <string name="contentDescriptor_previous">Previous Button</string>
    <string name="contentDescriptor_playPause">Play/Pause Button</string>
    <string name="contentDescriptor_next">Next Button</string>
    <string name="contentDescriptor_album">Album Artwork</string>
</resources>
